--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=GDKAYKY_ytdln-open
 sonar.organization=gdkayky
+sonar.sources=.          # aponta pro diretório com o código
 
 
 # This is the name and version displayed in the SonarCloud UI.
