--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -53,10 +53,11 @@ jobs:
         with:
           # Additional arguments for the SonarScanner CLI
           args:
+            -Dsonar.sources=.
+            -Dsonar.projectKey=GDKAYKY_ytdln-open
+            -Dsonar.organization=gdkayky
             # Unique keys of your project and organization. You can find them in SonarCloud > Information (bottom-left menu)
             # mandatory
-            -Dsonar.projectKey=
-            -Dsonar.organization=
             # Comma-separated paths to directories containing main source files.
             #-Dsonar.sources= # optional, default is project base directory
             # Comma-separated paths to directories containing test source files.
