--- a/package.json
+++ b/package.json
@@ -4,12 +4,33 @@
   "description": "A desktop app for downloading videos using yt-dlp.",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "dist": "electron-builder",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "build": {
+    "productName": "YTDLN Open",
+    "appId": "com.ytdln.open",
+    "extraResources": [
+      {
+        "from": "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp.exe",
+        "to": "bin/yt-dlp.exe"
+      },
+      {
+        "from": "https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0-win-64bit-build1.zip",
+        "to": "bin/aria2c.zip"
+      },
+      {
+        "from": "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip",
+        "to": "bin/ffmpeg.zip"
+      }
+    ]
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "^28.0.0"
+    "electron": "^28.3.3",
+    "electron-builder": "^26.0.12"
   }
 }
