--- a/package.json
+++ b/package.json
@@ -10,21 +10,7 @@
   },
   "build": {
     "productName": "YTDLN Open",
-    "appId": "com.ytdln.open",
-    "extraResources": [
-      {
-        "from": "https://github.com/yt-dlp/yt-dlp/releases/latest/download/yt-dlp.exe",
-        "to": "bin/yt-dlp.exe"
-      },
-      {
-        "from": "https://github.com/aria2/aria2/releases/download/release-1.37.0/aria2-1.37.0-win-64bit-build1.zip",
-        "to": "bin/aria2c.zip"
-      },
-      {
-        "from": "https://www.gyan.dev/ffmpeg/builds/ffmpeg-release-essentials.zip",
-        "to": "bin/ffmpeg.zip"
-      }
-    ]
+    "appId": "com.ytdln.open"
   },
   "keywords": [],
   "author": "",
