many many things

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "sonarlint.connectedMode.project": {
         "connectionId": "gdkayky",
         "projectKey": "GDKAYKY_ytdln-open"
-    }
+    },
+    "livePreview.defaultPreviewPath": "/src/index.html"
 }
