--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "@electron-forge/maker-deb": "^7.10.2",
     "@electron-forge/maker-rpm": "^7.10.2",
     "@electron-forge/maker-squirrel": "^7.10.2",
+    "@electron-forge/maker-wix": "^7.10.2",
     "@electron-forge/maker-zip": "^7.10.2",
-    "electron": "^28.3.3"
+    "@electron-forge/publisher-github": "^7.10.2",
+    "@felixrieseberg/electron-forge-maker-nsis": "^7.2.0",
+    "electron": "^28.3.3",
+    "electron-wix-msi": "^5.1.3"
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "dist": "^0.1.2",
     "open": "^10.2.0"
   }
 }
