Cleaner code and code smells fix

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "sonarlint.connectedMode.project": {
-        "connectionId": "gdkayky",
+        "connectionId": "Antigravity",
         "projectKey": "GDKAYKY_ytdln-open"
     },
     "livePreview.defaultPreviewPath": "/src/index.html"
