--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "ytdln-open",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A desktop app for downloading videos using yt-dlp.",
   "main": "src/main.js",
   "scripts": {
-    "start": "electron-forge start",
+    "start": "npm run build:ui && electron-forge start",
+    "build:ui": "cd ui && npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "package": "electron-forge package",
     "make": "electron-forge make"
