Update to version 1.1.0: Enhanced video downloader with new queue management, deep linking support, and improved UI. Added options for user settings and integrated WebSocket for real-time updates. Refactored download logic for better performance and error handling.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -6,7 +6,9 @@
   "permissions": [
     "activeTab",
     "storage",
-    "tabs"
+    "tabs",
+    "contextMenus",
+    "downloads"
   ],
   "host_permissions": [
     "<all_urls>"
