--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "open": "^10.2.0"
+    "open": "^10.2.0",
+    "ws": "^8.19.0"
+  },
+  "engines": {
+    "node": ">=25.0.0"
   }
 }
