--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@electron-forge/publisher-github": "^7.10.2",
     "@felixrieseberg/electron-forge-maker-nsis": "^7.2.0",
     "electron": "^39.2.6",
-    "electron-wix-msi": "^5.1.3"
+    "electron-wix-msi": "^5.1.3",
+    "eventsource": "^4.1.0"
   },
   "dependencies": {
     "chalk": "^4.1.2",
+    "express": "^5.2.1",
     "open": "^10.2.0"
   }
 }
