feat: enhance video download functionality and improve user experience
- Updated connection ID in VSCode settings for project configuration.
- Added permissions for notifications and context menus in the browser extension manifest.
- Implemented active download monitoring and robust error handling in background scripts.
- Enhanced download completion handling with multiple strategies for file retrieval.
- Improved progress tracking and notifications in the popup interface.
- Introduced a new API endpoint for serving downloaded files directly to the browser.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "sonarlint.connectedMode.project": {
-        "connectionId": "Antigravity",
+        "connectionId": "gdkayky",
         "projectKey": "GDKAYKY_ytdln-open"
     },
     "livePreview.defaultPreviewPath": "/src/index.html"
