--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npm run build:ui && electron-forge start",
     "build:ui": "cd ui && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "package": "electron-forge package",
     "make": "electron-forge make"
   },
@@ -24,7 +25,9 @@
     "@felixrieseberg/electron-forge-maker-nsis": "^7.2.0",
     "electron": "^39.2.6",
     "electron-wix-msi": "^5.1.3",
-    "eventsource": "^4.1.0"
+    "eventsource": "^4.1.0",
+    "fast-check": "^4.5.3",
+    "jest": "^30.2.0"
   },
   "dependencies": {
     "chalk": "^4.1.2",
