--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ytdln-open",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "A desktop app for downloading videos using yt-dlp.",
   "main": "src/main.js",
   "scripts": {
@@ -14,23 +14,23 @@
   "author": "YTDLN Open",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^7.10.2",
+    "@electron-forge/cli": "^7.8.3",
     "@electron-forge/maker-deb": "^7.10.2",
     "@electron-forge/maker-rpm": "^7.10.2",
     "@electron-forge/maker-squirrel": "^7.10.2",
     "@electron-forge/maker-wix": "^7.10.2",
     "@electron-forge/maker-zip": "^7.10.2",
     "@electron-forge/publisher-github": "^7.10.2",
-    "@felixrieseberg/electron-forge-maker-nsis": "^7.2.0",
-    "electron": "^39.2.6",
+    "electron": "^39.2.7",
+    "electron-forge-maker-nsis": "^25.1.0",
     "electron-wix-msi": "^5.1.3"
   },
   "dependencies": {
-    "chalk": "^4.1.2",
+    "chalk": "^5.3.0",
     "open": "^10.2.0",
     "ws": "^8.19.0"
   },
   "engines": {
-    "node": ">=25.0.0"
+    "node": ">=24.0.0"
   }
 }
