hotfix/Code-Quality, Improved CI/CD, added Jest,updated npm modules, removed forge, and improved overall code quality

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,13 @@ build/
 /bin
 /node_modules
 /out
+coverage/
+
+# Extension keys (NUNCA fazer commit de chaves privadas!)
+extension-keys/
+*.pem
+*.key
+
+# Release temporários
+releases/temp-crx/
+/postman
