--- a/package.json
+++ b/package.json
@@ -4,33 +4,29 @@
   "description": "A desktop app for downloading videos using yt-dlp.",
   "main": "src/main.js",
   "scripts": {
-    "start": "npm run build:ui && electron-forge start",
+    "start": "npm run build:ui && electron .",
     "build:ui": "cd ui && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "test": "jest --coverage",
+    "test:watch": "jest --watch",
+    "dist": "npm run build:ui && electron-builder"
   },
   "keywords": [],
   "author": "YTDLN Open",
   "license": "ISC",
   "devDependencies": {
-    "@electron-forge/cli": "^7.8.3",
-    "@electron-forge/maker-deb": "^7.10.2",
-    "@electron-forge/maker-rpm": "^7.10.2",
-    "@electron-forge/maker-squirrel": "^7.10.2",
-    "@electron-forge/maker-wix": "^7.10.2",
-    "@electron-forge/maker-zip": "^7.10.2",
-    "@electron-forge/publisher-github": "^7.10.2",
-    "electron": "^39.2.7",
-    "electron-forge-maker-nsis": "^25.1.0",
-    "electron-wix-msi": "^5.1.3"
+    "@electron/rebuild": "^4.0.2",
+    "electron": "^40.0.0",
+    "electron-builder": "^26.4.0",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0"
   },
   "dependencies": {
     "chalk": "^5.3.0",
     "open": "^10.2.0",
+    "tar": "^7.5.3",
     "ws": "^8.19.0"
   },
   "engines": {
-    "node": ">=24.0.0"
+    "node": ">=24.11.0"
   }
 }
