--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,15 +1,24 @@
 sonar.projectKey=GDKAYKY_ytdln-open
 sonar.organization=gdkayky
-sonar.sources=.          # aponta pro diretório com o código
+sonar.projectName=ytdln-open
+sonar.projectVersion=1.0
 
+# Encoding of the source code
+sonar.sourceEncoding=UTF-8
 
-# This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=ytdln-open
-#sonar.projectVersion=1.0
+# Directories to analyze
+sonar.sources=src,ui/src,extension
+sonar.tests=tests
 
+# Exclude directories
+sonar.exclusions=**/node_modules/**,**/dist/**,**/out/**,**/*.crx,**/bin/**
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+# JavaScript/TypeScript specific
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
+sonar.javascript.file.suffixes=.js,.jsx,.ts,.tsx
 
-# Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+# CSS specific
+sonar.css.file.suffixes=.css
+
+# Coverage
+sonar.coverage.exclusions=**/node_modules/**,**/tests/**,**/*.test.js,**/*.spec.js
