--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
   "name": "YTDLN-OPEN",
-  "version": "1.1.0",
-  "description": "Download vídeos diretamente para o YTDLN-OPEN com um clique.",
+  "version": "1.1.2",
+  "description": "Download videos directly to YTDLN-OPEN with one click.",
   "permissions": [
     "activeTab",
     "storage",
